--- a/index.html
+++ b/index.html
@@ -59,13 +59,12 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="sobre">
         <div class="my-auto">
-          <h1 class="mb-0">Mateus
+          <h2 class="mb-3">Mateus
             <span class="text-primary">Santos</span>
-          </h1>
+          </h2>
           <div class="subheading mb-5">Avenida Tâmara, Nº 435, Carapicuíba - SP, CEP 06320-020, Cel:(11) 98453-4419 ·
             <a href="mailto:mateus.artur@hotmail.com">mateus.artur@hotmail.com</a>
           </div>
-          <p class="mb-5">Tenho experiência em desenvolvimento em alta plataforma, na linguagem COBOL.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/mateus-santos-33aa83114/" target="_blank">
@@ -97,14 +96,14 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiencia">
         <div class="my-auto">
-          <h2 class="mb-5">Experiência</h2>
+          <h3 class="mb-3">Experiência</h3>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Analista de Sistemas Júnior</h3>
-              <div class="subheading mb-3">Stefanini</div>
-                <li>Desenvolvimento de Software em COBOL e CICS;</li>
-                <li>Desenvolvimento de Software utilizando DB2;</li>
+              <h4 class="mb-3">Analista de Sistemas Júnior</h4>
+              <div class="subheading mb-0">Stefanini</div>
+                <li>Desenvolvimento em COBOL e CICS;</li>
+                <li>Desenvolvimento utilizando DB2;</li>
                 <li>Levantamento e Elaboração de Requisitos;</li>
                 <li>Diagrama de Fluxo de Dados;</li>
             </div>
@@ -113,12 +112,12 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Analista de Sistemas Trainee</h3>
-              <div class="subheading mb-3">Stefanini</div>
-                <li>Desenvolvimento de Software em COBOL e CICS;</li>
-                <li>Desenvolvimento de Software utilizando DB2;</li>
+              <h4 class="mb-3">Analista de Sistemas Trainee</h4>
+              <div class="subheading mb-0">Stefanini</div>
+                <li>Desenvolvimento em COBOL e CICS;</li>
+                <li>Desenvolvimento utilizando DB2;</li>
                 <li>Levantamento e Elaboração de Requisitos;</li>
                 <li>Diagrama de Fluxo de Dados;</li>
             </div>
@@ -129,10 +128,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Estágio</h3>
-              <div class="subheading mb-3">Stefanini</div>
-                <li>Desenvolvimento de Software em COBOL e CICS;</li>
-                <li>Desenvolvimento de Software utilizando DB2;</li>
+              <h4 class="mb-3">Estágio</h4>
+              <div class="subheading mb-0">Stefanini</div>
                 <li>Levantamento e Elaboração de Requisitos;</li>
                 <li>Diagrama de Fluxo de Dados;</li>
             </div>
